--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 					<button class="box"></button>
 					<button class="box"></button>
 				</div>
+				Made by Vchallenger!
 			</div>
 			<button id="reset-btn">Reset Game</button>
 		</main>
