--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<button class="box"></button>
 					<button class="box"></button>
 				</div>
-				Made by Vchallenger!
+				Made by Vatsal Chevli!
 			</div>
 			<button id="reset-btn">Reset Game</button>
 		</main>
