--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title ">Tic-Tac-Toe Game</title>
+		<meta name="description" content="Play tic tac toe with your friend(ONLY MULTIPLAYER)">
+    		<meta name="keywords" content="tic tac toe, tictactoe, tic-tac-toe, multiplayer, game, multiplayergame, multiplayer game, tick tack toe, tik tak toe, crosscircle, cross circle, cross-circle, soon chokat">
+    		<meta name="author" content="Jon Doe">
+		<title ">Tic-Tac-Toe</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
