--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<button class="box"></button>
 					<button class="box"></button>
 				</div>
-				<h4>Made by Vatsal Chevli!</h4>
+				<h4>Made by <a href="https://github.com/VatsalDC/tic-tac-toe">Vatsal Chevli</a></h4>
 			</div>
 			<button id="reset-btn">Reset Game</button>
 		</main>
