added git link to home page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 			<br />
 			<center class="gamemode">Play Against</center>
 		</h5>
+		<h4 id="credit">
+					Made by
+					<a href="https://github.com/VatsalDC/tic-tac-toe"
+						>Vatsal Chevli</a
+					>
+				</h4>
 		<center>
 			<button id="spbtn" onclick="window.location='index.html'">
 				Computer
