added Single Player mode

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					>
 				</h4>
 		<center>
-			<button id="spbtn" onclick="window.location='index.html'">
+			<button id="spbtn" onclick="window.location='sp.htm'">
 				Computer
 			</button>
 			<button id="mpbtn" onclick="window.location='multiplayer.html'">
