--- a/multiplayer.html
+++ b/multiplayer.html
@@ -21,6 +21,7 @@
 	<body>
 		<div class="msg-container hide">
 			<p class="msg">Winner</p>
+			<p class="msg2">Scroll down to see the win pattern</p>
 			<button class="new-btn" role="button">
 				<span class="text"> New Game </span>
 			</button>
