multiplayer name shorted

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				Computer
 			</button>
 			<button id="mpbtn" onclick="window.location='multiplayer.html'">
-				Friend (multiplayer)
+				Multiplayer
 			</button>
 		</center>
 	</body>
